--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -23,3 +23,12 @@
 body {
   background-color: #F0B67F;
 }
+main {
+  display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	align-items: center;
+}
+.placeHeader{
+  text-align: center;
+}
