setti myndir við pizza staði og lagaði texta

--- a/client/src/Components/Header/Header.module.scss
+++ b/client/src/Components/Header/Header.module.scss
@@ -14,7 +14,7 @@ header {
 	padding-top: 20px;
     text-align: center;
 }
-a {
+.navbuttons a {
     background: rgba(#fff, 0);
     border-bottom: 1px solid;
     color: #fff;
