--- a/client/src/Components/Home/Home.module.scss
+++ b/client/src/Components/Home/Home.module.scss
@@ -7,7 +7,7 @@
 	padding-top: 20px;
     text-align: center;
 }
-a {
+.navbuttons a {
     background: rgba(#fff, 0);
     border-bottom: 1px solid;
     color: #fff;
