pizzacards, code cleanup, impl staði, norðurland vs suðurland

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -32,3 +32,11 @@ main {
 .placeHeader{
   text-align: center;
 }
+.pizzaCardContainer {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  
+}
