--- a/client/src/Components/Category/Category.module.scss
+++ b/client/src/Components/Category/Category.module.scss
@@ -1,10 +1,14 @@
 .wrapper {
-  width: 50%;
-  height: 450px;
+  width: 100%;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .listContainer {
-  flex-direction: column;
+  flex-direction: row;
   list-style: none;
   flex-wrap: wrap;
   height: 84%;
@@ -12,6 +16,7 @@
   padding: 0;
   margin: 0;
   li {
-    flex: 1 0 0;
+    flex: 1 0 196px;
+    white-space: nowrap;
   }
 }
