--- a/client/src/Components/Home/Home.module.scss
+++ b/client/src/Components/Home/Home.module.scss
@@ -6,6 +6,9 @@
   list-style: none;
   padding-top: 20px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .navbuttons a {
   background: rgba(#fff, 0);
@@ -56,9 +59,8 @@
 
 .categoryContainer {
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-evenly;
-  text-align: left;
+  flex-direction: column;
+  width: 72%;
+  justify-content: center;
+  align-items: center;
 }
