--- a/client/src/Components/PizzaCard/Card.module.scss
+++ b/client/src/Components/PizzaCard/Card.module.scss
@@ -1,35 +1,48 @@
-
+@import "../../Styles/variable";
 
 .cardContainer {
-    width: 430px;
-    display:flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    background: #d76e25;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin: 20px 0;
-    animation-name: fade-in;
-    height: 700px;
+  width: 430px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  background: whitesmoke;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin: 20px 0;
+  animation-name: fade-in;
+  height: 700px;
+  color: $color-4;
 }
 
 .textContainer {
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 @-webkit-keyframes fade-in {
-    0% { opacity: 0; }
-    40% {opacity: 0;}
-    100% { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @keyframes fade-in {
-    0% { opacity: 0; }
-    40% {opacity: 0;}
-    100% { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
