--- a/client/src/Components/Header/Header.module.scss
+++ b/client/src/Components/Header/Header.module.scss
@@ -1,61 +1,61 @@
 header {
-	background-color:  #E1332D;
-	width: 100%;
-	height: 100px;
-	color: white;
+  background-color: #e1332d;
+  width: 100%;
+  color: white;
 }
 
 .navContainer {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	min-width: 696px;
-	list-style: none;
-	padding-top: 20px;
-    text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-align: center;
+  padding: 10px;
 }
-.navbuttons a {
-    background: rgba(#fff, 0);
-    border-bottom: 1px solid;
-    color: #fff;
-    line-height: 1.4;
-    padding: .25em;
-    text-decoration: none;
-    
-    &:hover {
-      background: rgba(#fff, 1);
-      color: #E1332D;
-    }
-}
-.navbuttons {
-    border: 0 solid;
-    box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
-    outline: 1px solid;
-    outline-color: rgba(255, 255, 255, .5);
-    outline-offset: 0px;
-    text-shadow: none;
-    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
-    margin: 10px;
-    padding: 15px 32px;
 
-    color: #fff;
-    cursor: pointer;
-    // display: block;
-    font-size:16px;
-    font-weight: 400;
-    line-height: 45px;
-    //margin: 0 0 2em;
-    max-width: 160px; 
-    position: relative;
-    text-decoration: none;
-    text-transform: uppercase;
-    width: 100%; 
-  } 
-  
-  .navbuttons:hover {
-    border: 1px solid;
-    box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
-    outline-color: rgba(255, 255, 255, 0);
-    outline-offset: 15px;
-    text-shadow: 1px 1px 2px #427388; 
+.navbuttons a {
+  background: rgba(#fff, 0);
+  border-bottom: 1px solid;
+  color: #fff;
+  line-height: 1.4;
+  padding: 0.2em;
+  text-decoration: none;
+
+  &:hover {
+    background: rgba(#fff, 1);
+    color: #e1332d;
+  }
+}
+
+.navbuttons {
+  border: 1px solid rgba(255, 255, 255, 0);
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+  outline: 1px solid;
+  outline-color: rgba(255, 255, 255, 0.5);
+  outline-offset: 0px;
+  text-shadow: none;
+  transition: all 250ms;
+  margin: 10px;
+  padding: 15px 16px;
+
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  flex-basis: 160px;
+}
+
+.navbuttons:hover {
+  border: 1px solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5),
+    0 0 20px rgba(255, 255, 255, 0.2);
+  outline-color: rgba(255, 255, 255, 0);
+  outline-offset: 15px;
 }
