--- a/client/src/Components/PizzaPlacesComponent/PizzaPlaceContent.module.scss
+++ b/client/src/Components/PizzaPlacesComponent/PizzaPlaceContent.module.scss
@@ -3,10 +3,42 @@
   max-width: 940px;
   margin: 50px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+
+  h2 {
+    width: 100%;
+    display: flex;
+    margin: 0;
+    -webkit-animation: fade-in 0.5s linear both;
+    animation: fade-in 0.5s linear both;
+
+    &::before,
+    &::after {
+      content: "";
+      flex: 1;
+      margin: auto 0.4em;
+      height: 2px;
+      background-color: gray;
+    }
+  }
+  a {
+    flex: 0 1 20%;
+    @media screen and (max-width: 580px) {
+      order: 0;
+    }
+  }
+
+  p {
+    flex: 1 1 60%;
+    @media screen and (max-width: 580px) {
+      order: 1;
+    }
+  }
 }
-.birgjarlogo {
+
+.logo {
   width: 150px;
   height: auto;
   border-radius: 5px;
@@ -14,18 +46,13 @@
   -webkit-animation: fade-in 0.5s linear both;
   animation: fade-in 0.5s linear both;
 }
-.pizzaPlacetexti1 {
-  -webkit-animation: slide-left 0.5s linear both;
-  animation: slide-left 0.5s linear both;
+.textSlideLeft {
+  -webkit-animation: slide-left 0.3s linear both;
+  animation: slide-left 0.3s linear both;
 }
-.pizzaPlacetexti2 {
-  -webkit-animation: slide-right 0.5s linear both;
-  animation: slide-right 0.5s linear both;
-}
-.pizzaPlacenafn {
-  -webkit-animation: fade-in 0.5s linear both;
-  animation: fade-in 0.5s linear both;
-  margin: 20px;
+.textSlideRight {
+  -webkit-animation: slide-right 0.3s linear both;
+  animation: slide-right 0.3s linear both;
 }
 
 @-webkit-keyframes fade-in {
