--- a/client/src/Components/PizzaCard/Card.module.scss
+++ b/client/src/Components/PizzaCard/Card.module.scss
@@ -3,24 +3,44 @@
 .cardContainer {
   width: 430px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   background: whitesmoke;
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin: 20px 0;
-  animation-name: fade-in;
-  height: 700px;
   color: $color-4;
 }
 
 .textContainer {
   margin: 10px;
   display: flex;
+  width: 100%;
+  height: 80%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.logo {
+  height: 20%;
+  width: 100%;
+  background-color: hotpink;
+}
+
+.textContainer h2 {
+  display: flex;
+  text-align: center;
+  width: 100%;
+}
+.textContainer h2:before,
+.textContainer h2:after {
+  content: "";
+  flex: 1;
+  margin: auto 0.4em;
+  height: 2px;
+  background-color: gray;
 }
 
 @-webkit-keyframes fade-in {
